adjusted playlistvideoscontainer size to stop overflow, clear searchresults when searchterm is cleared

--- a/src/App.css
+++ b/src/App.css
@@ -170,7 +170,7 @@
 
 .playlistVideosContainer {
   overflow-y: auto;
-  height: 100%;
+  height: 81%;
 }
 
 .playlistVideoContainer {
